Project

General

Profile

Actions

Bug #64063

closed

rbd-nbd: incorrect device size immediately after mapping images using ioctl

Added by Ramana Raja 4 months ago. Updated 3 months ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Mapped rbd images/snapshots to nbd devices using ioctl method, which is currently the default method of mapping using rbd-nbd. Checked the device size and the MD5 checksum of the device immediately after the mapping. The device size and the MD5 checksum were zero bytes and d41d8cd98f00b204e9800998ecf8427e (MD5 checksum of a zero byte file) respectively. After sleeping for a few seconds, the correct device size and MD5 checksum were reported. It seems like the command to map a rbd image to a nbd device using ioctl method returns before waiting for the device to be ready for use.

However, no such issues were observed when mapping a rbd image to a nbd device using the netlink method.

Actions #1

Updated by Ilya Dryomov 4 months ago

Unclear if it's worth working around this by waiting internally at this point. I think the action here is to use the netlink method by default, keeping the legacy ioctl method with all of its issues only as a fallback.

Actions #2

Updated by Ramana Raja 4 months ago

  • Description updated (diff)
Actions #3

Updated by Ramana Raja 4 months ago

  • Status changed from New to In Progress
  • Assignee set to Ramana Raja
Actions #4

Updated by Ramana Raja 4 months ago

  • Pull request ID set to 55234
Actions #5

Updated by Ilya Dryomov 3 months ago

  • Status changed from In Progress to Resolved
Actions

Also available in: Atom PDF